--- a/MvcShopping/Views/Admin/Add.cshtml
+++ b/MvcShopping/Views/Admin/Add.cshtml
@@ -36,14 +36,6 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Color)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Color)
-            @Html.ValidationMessageFor(model => model.Color)
-        </div>
-
-        <div class="editor-label">
             @Html.LabelFor(model => model.Price)
         </div>
         <div class="editor-field">
@@ -51,11 +43,11 @@
             @Html.ValidationMessageFor(model => model.Price)
         </div>
         <div class="editor-label">
-            @Html.LabelFor(model => model.Url)
+            @Html.LabelFor(model => model.Stock)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Url)
-            @Html.ValidationMessageFor(model => model.Url)
+            @Html.EditorFor(model => model.Stock)
+            @Html.ValidationMessageFor(model => model.Stock)
         </div>
         <p>
             <input type="submit" value="添加" />
